# OpenGL-3D-Drawer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: imgui.ini
include/OpenGL/lib/assimp/: assimp-vc142-mtd.exp
res/assets/Basics/: axes.mtl  bulb.mtl  cube.mtl  sphere.mtl  sun.mtl
res/assets/NormalTest/: plane.mtl
res/assets/backpack/: backpack.mtl
res/assets/brickwall/: plane.mtl
res/assets/monastyr/: monastyr.mtl
res/scenes/: defaultScene.json  default_scene.json  test_save.json  yegor.json
res/shaders/: gBuffer.fs.glsl  gBuffer.vs.glsl  lBuffer.fs.glsl  lBuffer.vs.glsl  mainf.glsl  mainv.glsl  postProcess.fs.glsl  postProcessf.glsl  postProcessv.glsl  shadow.vs.glsl  shadow_volumeg.glsl  shadow_volumev.glsl  shadowf.glsl  shadowg.glsl  shadowv.glsl  skybox.fs.glsl  skybox.vs.glsl  uif.glsl
src/: CMakeLists.txt  main.cpp
src/Core/: Actor.cpp  Actor.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Config.cpp  Config.h  EngineException.cpp  EngineException.h  Event.hpp  EventsHandler.cpp  EventsHandler.h  Global.cpp  Global.h  InGameException.cpp  InGameException.h  Layer.hpp  MainLoop.cpp  MainLoop.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Profiler.hpp  ResourcesManager.cpp  ResourcesManager.h  Scene.cpp  Scene.h  Structures.h  UniqueID.hpp  UniqueIdGenerator.hpp  Utils.hpp  Window.cpp  Window.h
src/Editor/: EditorLayer.cpp  EditorLayer.h
src/Entity/: Components.h  Entity.cpp  Entity.h  JsonSceneSerializer.hpp  Scene.cpp  Scene.h
src/Game/: GameLayer.cpp  GameLayer.h
src/Input/: ActionsMapping.cpp  ActionsMapping.h  EventsHandler.cpp  EventsHandler.h
src/Lighting/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  ShadowsHandler.cpp  ShadowsHandler.h
src/Loaders/: cwalk.c  cwalk.h
src/Logging/: easylogging++.cc  easylogging++.h
src/Render/: FBO.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererIniSerializer.hpp  SSBO.hpp  Shader.cpp  Shader.h  UBO.cpp  UBO.h  UBO.hpp  VAO.h
src/UI/: UIBase.cpp  UIBase.h  UIHandler.cpp  UIHandler.h
vendors/: json.hpp
vendors/lib/assimp/: assimp-vc142-mtd.def
